# AI-Dev-Tools-Zoomcamp-2025

./: .gitmodules  README.md  main.py  pyproject.toml  search.py  test_word_count.py
.cache/fastmcp-main/: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.cache/fastmcp-main/examples/testing_demo/: README.md  pyproject.toml  server.py
.cache/fastmcp-main/examples/testing_demo/tests/: test_server.py
.github/workflows/: ci.yml
01-todo/: README.md  answers.md  db.sqlite3  pyproject.toml  social_media_posts.md
01-todo/todo_app/: models.py  tests.py  urls.py  views.py
01-todo/todo_project/: settings.py
02-end-to-end/: .dockerignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  answers.md  homework.md  package-lock.json  package.json
02-end-to-end/client/: package-lock.json  (+1 more)
03-mcp/: README.md
03-mcp/mcp-dev-workflow/: .gitignore  CONTEXT7_INTEGRATION_SUMMARY.md  DEVELOPMENT_WORKFLOW_SUMMARY.md  MCP_INSPECTOR_README.md  Module 3 — MCP Deep Dive & Agents (Developer-Centric Servers).md  README_VSCODE.md  SOCIAL_MEDIA_POSTS.md  TROUBLESHOOTING.md  WORKFLOW_USAGE_GUIDE.md  demo_context7_integration.py  demo_stdio_server.py  install.py  manual_test_requests.txt  mcp.json  pyproject.toml  requirements.txt  test_stdio_server.py  workflow_demo.py
03-mcp/mcp-dev-workflow/config/: mcp_config.py
03-mcp/mcp-dev-workflow/docs/: MCP_INSPECTOR_GUIDE.md  VSCODE_SETUP.md
03-mcp/mcp-dev-workflow/examples/: README.md  fastapi_development_example.py  multi_server_coordination_example.py
03-mcp/mcp-dev-workflow/mcp_server/: __init__.py  http_server.py  stdio_server.py
03-mcp/mcp-dev-workflow/mcp_server/core/: __init__.py  protocol.py  server.py
03-mcp/mcp-dev-workflow/mcp_server/tools/: __init__.py  base.py  context7.py  echo.py  weather.py
03-mcp/mcp-dev-workflow/mcp_server/transport/: __init__.py  base.py  http.py  stdio.py
03-mcp/mcp-dev-workflow/scripts/: __init__.py  activate_env.sh  run_http_server.py  run_stdio_server.py  setup.py  setup_mcp_inspector.py  setup_vscode.py  test_mcp_config.py  test_with_inspector.py  verify_inspector_integration.py  verify_setup.py
03-mcp/mcp-dev-workflow/tests/: test_core_protocol.py  test_server_tools_integration.py  test_stdio_integration.py  test_stdio_transport.py  test_tools_manager.py
03-mcp/mcp-dev-workflow/workflow_results/: fastapi_workflow_20251218_170043.json  workflow_report_20251218_170032.md  workflow_results_20251218_170032.json
Evaluations for Project Attempt 1/: 1-Beautiful-Fermat-Evaluation.md  2-Babatunde-Abubakar-Evaluation.md  3-Keen-Germain-Evaluation.md  QUICK-REFERENCE.md  README.md  VISUAL-SUMMARY.md
Project/: Project Evaluation Rubric.md
(+302 files in other folders)
