[project]
name = "testing-demo"
version = "0.1.0"
description = "FastMCP testing example demonstrating pytest-asyncio patterns"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=1.2.0",
    "dirty-equals>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
